<resources>
    <string name="app_name">NexBusi</string>
    <string name="TermosNexbusi">Li e concordo com os Termos de Serviço e a\n Política de Privacidade da NexBusi</string>
    <string name="Registrar">Registre-se</string>
    <string name="dados">Dados empresariais:</string>
    <string name="nomeEmpresa">Nome da Empresa</string>
    <string name="emailEmpresa">Email Empresarial</string>
    <string name="cnpj">CNPJ</string>
    <string name="dadosPessoais">Dados pessoais:</string>
    <string name="senha">Senha</string>
    <string name="userName">Nome de Usuário</string>
    <string name="ConfSenha">Confirmar Senha</string>
    <string name="possuiConta">Já possui uma conta? Faça Login</string>
    <string name="continuar">Continuar</string>
    <string name="bem_vindo_nexbusi">Bem-vindo à NexBusi!</string>
    <string name="nome_carregando">Nome: Carregando...</string>
    <string name="cnpj_carregando">CNPJ: Carregando...</string>
    <string name="email_carregando">Email: Carregando...</string>
    <string name="usu_rio_carregando">Usuário: Carregando...</string>
    <string name="status_carregando">Status: Carregando...</string>
    <string name="sair">Sair</string>
    <string name="saidas_hoje">Saidas hoje</string>
    <string name="_0">0</string>
    <string name="em_estoque">Em estoque</string>
    <string name="_02">0%</string>
    <string name="alertas">Alertas</string>
    <string name="de_estoque">De estoque</string>
    <string name="sem_mudan_as">Sem mudanças</string>
    <string name="a_es_r_pidas">Ações Rápidas</string>
    <string name="estoque">Estoque</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="usu_rio">Usuário:</string>
    <string name="sair2">Sair</string>
    <string name="total_em_produtos">Total em produtos</string>
    <string name="perfil">Perfil</string>
    <string name="notifica_es">Notificações</string>
    <string name="configura_es">Configurações</string>
    <string name="lucro_liquido">Lucro Liquido</string>
    <string name="cadastrar_produtos">Cadastrar produtos</string>
    <string name="open_drawer">Abrir menu</string>
    <string name="close_drawer">Fechar menu</string>
</resources>